--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <div class="w-20 py-6 flex justify-center bg-gray-100 rounded-md mb-4">
                             <i class="fas fa-user-graduate"></i>
                         </div>
-                        <a href="https://youtu.be/qDcRyJyvJDM" target="_blank">
+                        <a href="https://itacct.tech/" target="_blank">
                             <div class="w-20 py-6 flex justify-center bg-gray-100 rounded-md mb-4 hide" title="Watch">
                                 <div class="icon">
                                     <i class="fas fa-eye"></i>
