--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="https://github.com/Rijan234/Project-Work" target="_blank">
+                        <a href="https://github.com/Rijan234/Library-Management-System.git" target="_blank">
                             <div class="w-20 py-6 flex justify-center bg-gray-100 rounded-md mb-4 hide" title="Code">
                                 <div class="icon">
                                     <i class="fas fa-code"></i>
