--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         <div class="container max-w-screen-xl mx-auto px-4">
 
             <div class="text-center">
-                <h1 class="font-medium text-gray-700 text-4xl md:text-5xl mb-5">Contact </h1>
+                <!-- <h1 class="font-medium text-gray-700 text-4xl md:text-5xl mb-5">Contact </h1> -->
 
 
                 <div class="flex items-center justify-center space-x-8">
