--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <nav class="flex items-center justify-between mb-20">
                 <img src="assets/image/navbar-logo.png" alt="Logo">
-                <a href="assets/cv.pdf" download>
+                <a href="assets/Rijan Rai CV.pdf" download>
                     <button
                         class="px-7 py-3 md:px-9 md:py-4 bg-white font-medium md:font-semibold text-gray-700 text-md rounded-md hover:bg-gray-700 hover:text-white transition ease-linear duration-500">Get
                         my CV</button>
@@ -80,7 +80,7 @@
                                 <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
                             </svg>
                         </div>
-                        <a href="https://youtu.be/iqa1Zs7uNU0" target="_blank">
+                        <a href="https://www.youtube.com/watch?v=QCAXmbgzWXY" target="_blank">
                             <div class="w-20 py-6 flex justify-center bg-gray-100 rounded-md mb-4 hide" title="Watch">
                                 <div class="icon">
                                     <i class="fas fa-eye"></i>
