--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.28.0/feather.min.js"
         integrity="sha512-7x3zila4t2qNycrtZ31HO0NnJr8kg2VI67YLoRSyi9hGhRN66FHYWr7Axa9Y1J9tGYHVBPqIjSE1ogHrJTz51g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <link rel="icon" href="/assets/image/mountain.png" type="image/x-icon">
+        <link rel="icon" href="/assets/image/rijan.png" type="image/x-icon">
 </head>
 
 <body class="bg-gray-100">
@@ -25,7 +25,7 @@
         <div class="container max-w-screen-xl mx-auto px-4">
 
             <nav class="flex items-center justify-between mb-20">
-                <img src="assets/image/navbar-logo.png" alt="Logo">
+                <img src="assets/image/rijan.png" alt="Logo">
                 <a href="assets/Rijan Rai CV.pdf" download>
                     <button
                         class="px-7 py-3 md:px-9 md:py-4 bg-white font-medium md:font-semibold text-gray-700 text-md rounded-md hover:bg-gray-700 hover:text-white transition ease-linear duration-500">Get
